# tick-tock-tau

./: .gitignore  Cargo.toml
src/: cli.rs  lib.rs  main.rs  model.rs
src/cli/: config.rs  mod.rs
src/model/: intervals.rs  mod.rs  tau-test
